Change Log:
This file contains the change log. The changes are marked with the following symbology.

+ for a new feature
- for a removed feature
* for a modified feature or a bugfix

-----------------

20110515
+ Added (experiemental) support for Max OSX. This is not very well tested yet but should work. 
+ Fixed  issue 15 : The Firefox proxy search lacked support for socks proxy. This is now available.
* Fixed  issue 12 : The PAC JavaScript method isInNet did not work for all patterns. This is fixed now.

20110210
* Fixed issue 11: Parsing was unreliable when a PAC script returned more than one proxy 
* Some code cleanup to fix some minor problems (platform detection issues and others) 
+ Added a debug system property "com.btr.proxy.pac.overrideLocalIP" for the PAC parser 
+ Added Support for the IE "Bypass Proxy Server for local addresses" feature

20100914
+ PAC support on Java 1.6 will now use the javax.script framework and the internal javascript engine that is shipped with JRE6. This will allow you to support PAC without bundling the Rhino engine which will dramatically reduce the footprint of the library. Java 1.5 will still be supported but then you need to bundle it with the Rhino engine.
+ Added contributed dlls to support 64 windows version for the IE proxy detection.
* Some fixes for the http client that is used to download PAC scripts from a webserver. We accept now all content-type send by the server and we support now different charsets for the scripts.
* Fixed some unit tests that did not pass and did some other small fixes.

20100724
* Fixed Issue 5: PAC Parser was not working correctly in multithreaded environments.

20100411
* Fixed Issue 4: Improved parser used to parse proxy urls from environment varibales and other places

Older
Did not track changes for older releases 